--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mariam-pos-api",
+  "name": "mariam-pos-web-api",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
